Fix nav on mobile

--- a/shared/scss/base/common/layout.scss
+++ b/shared/scss/base/common/layout.scss
@@ -27,10 +27,6 @@ body {
   }
 }
 
-.content-area {
-  margin-top: $navbar-height;
-}
-
 .has-notification {
   ~ .content-area {
     margin-top: $navbar-height + $notificationbar-height;
